--- a/style.css
+++ b/style.css
@@ -1,166 +1,167 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  :root {
-    --card-color-primary: #f7dd43;
-    --card-color-title-border: #746615;
-    --card-color-bg: #202024;
-    --bg: url(./assets/bg-blue.svg);
-  }
-  
-  body.blue {
-    --card-color-primary: #338af3;
-    --card-color-title-border: #338af3;
-    --card-color-bg: #202024;
-    --bg: url(./assets/bg-blue.svg);
-  }
-  
-  body.green {
-    --card-color-primary: #047c3f;
-    --card-color-title-border: #047c3f;
-    --card-color-bg: #1a1f1b;
-    --bg: url(./assets/bg-green.svg);
-  }
-  
-  body.yellow {
-    --card-color-primary: #f7dd43;
-    --card-color-title-border: #746615;
-    --card-color-bg: #202024;
-    --bg: url(./assets/bg-yellow.svg);
-  }
-  
-  ul {
-    list-style: none;
-  }
-  
-  body * {
-    font-family: "Roboto", sans-serif;
-  }
-  
-  body {
-    background-color: #121214;
-    background-image: var(--bg);
-    background-position: top center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
-  #app {
-    width: fit-content;
-    margin: auto;
-    padding-top: 52px;
-  }
-  
-  header {
-    margin-bottom: 63px;
-    text-align: center;
-  }
-  
-  #cards {
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
-  }
-  
-  .card {
-    padding: 32px 23px;
-    text-align: center;
-  
-    background: var(--card-color-bg);
-    border-bottom: 2px solid var(--card-color-primary);
-    border-radius: 6px;
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --card-color-primary: #f7dd43;
+  --card-color-title-border: #746615;
+  --card-color-bg: #202024;
+  --bg: url(./assets/bg-blue.svg);
+}
+
+body.blue {
+  --card-color-primary: #338af3;
+  --card-color-title-border: #338af3;
+  --card-color-bg: #202024;
+  --bg: url(./assets/bg-blue.svg);
+}
+
+body.green {
+  --card-color-primary: #047c3f;
+  --card-color-title-border: #047c3f;
+  --card-color-bg: #1a1f1b;
+  --bg: url(./assets/bg-green.svg);
+}
+
+body.yellow {
+  --card-color-primary: #f7dd43;
+  --card-color-title-border: #746615;
+  --card-color-bg: #202024;
+  --bg: url(./assets/bg-yellow.svg);
+}
+
+ul {
+  list-style: none;
+}
+
+body * {
+  font-family: "Roboto", sans-serif;
+}
+
+body {
+  background-color: #121214;
+  background-image: var(--bg);
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+#app {
+  width: fit-content;
+  margin: auto;
+  padding-top: 52px;
+}
+
+header {
+  margin-bottom: 63px;
+  text-align: center;
+}
+
+#cards {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.card {
+  padding: 32px 23px;
+  text-align: center;
+  justify-content: right;
+
+  background: var(--card-color-bg);
+  border-bottom: 2px solid var(--card-color-primary);
+  border-radius: 6px;
+
+  opacity: 0;
+  animation: appear 2s forwards;
+}
+
+.card h2 {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+
+  padding: 8px 16px;
+  border: 1px solid var(--card-color-title-border);
+  border-radius: 6px;
+
+  width: fit-content;
+  margin-inline: auto;
+  margin-bottom: 53px;
+
+  color: #f7dd43;
+}
+
+.card h2 span {
+  color: #e1e1e6;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+.card ul {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+
+  width: 270px;
+}
+
+.card ul li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card ul li + li {
+  padding-top: 24px;
+  border-top: 1px solid #323238;
+}
+
+.card ul li strong {
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 125%;
+  color: #e1e1e6;
+}
+
+.card h2:hover,
+.card ul li strong:hover,
+.card ul li img:hover {
+  transform: scale(1.1);
+}
+
+.card h2,
+.card ul li strong,
+.card ul li img {
+  transition: transform 0.3%;
+}
+
+.name-band {
+  display: flex;
+  justify-content: space-between;
+  color: #e1e1e6;
+  opacity: 0.8;
+}
+
+@keyframes appear {
+  0% {
+    transform: translateY(-50px);
     opacity: 0;
-    animation: appear 2s forwards;
   }
-  
-  .card h2 {
-    display: flex;
-    gap: 16px;
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@media (min-width: 700px) {
+  #cards {
+    max-width: 1070px;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-  
-    padding: 8px 16px;
-    border: 1px solid var(--card-color-title-border);
-    border-radius: 6px;
-  
-    width: fit-content;
-    margin-inline: auto;
-    margin-bottom: 53px;
-  
-    color: #f7dd43;
   }
-  
-  .card h2 span {
-    color: #e1e1e6;
-    font-size: 14px;
-    text-transform: uppercase;
-  }
-  
-  .card ul {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-  
-    width: 270px;
-  }
-  
-  .card ul li {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .card ul li + li {
-    padding-top: 24px;
-    border-top: 1px solid #323238;
-  }
-  
-  .card ul li strong {
-    font-weight: 900;
-    font-size: 36px;
-    line-height: 125%;
-    color: #e1e1e6;
-  }
-  
-  .card h2:hover,
-  .card ul li strong:hover,
-  .card ul li img:hover {
-    transform: scale(1.1);
-  }
-  
-  .card h2,
-  .card ul li strong,
-  .card ul li img {
-    transition: transform 0.3%;
-  }
-  
-  .name-band {
-    display: flex;
-    justify-content: space-between;
-    color: #e1e1e6;
-    opacity: 0.8;
-  }
-  
-  @keyframes appear {
-    0% {
-      transform: translateY(-50px);
-      opacity: 0;
-    }
-  
-    100% {
-      opacity: 1;
-    }
-  }
-  
-  @media (min-width: 700px) {
-    #cards {
-      max-width: 670px;
-      flex-direction: row;
-      flex-wrap: wrap;
-    }
-  }
-  
+}
